# Xay

./: Cargo.toml
xay-core/: Cargo.toml
xay-core/src/: future_err.rs  lib.rs
xay-core/src/client/: duplex.rs  mod.rs
xay-core/src/common/protocol/: mod.rs
xay-core/src/config/: mod.rs
xay-core/src/proxy/: crypto.rs  mod.rs
xay-core/src/proxy/vmess/: account.rs  mod.rs  session.rs
xay-core/src/transport/: ws.rs
