[package]
name = "xay-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "*"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["net"] } 
anyhow = "*"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
tracing = "0.1"
lazy_static = { version = "1" }
tokio-util = { features = ["full"], version = "*"}
futures = "*"
bytes = "*"
pin-project = "*"
nix = "0.22"
fxhash = "*"
tokio-tungstenite = "*"
convert_case = "*"
thiserror = "*"
rand = "*"
fnv = "1.0.3" 
